--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -233,7 +233,7 @@
                 <configuration>
                     <systemPropertyVariables>
                         <cucumber.api.java.ObjectFactory>
-                            com.github.haschi.haushaltsbuch.infrastruktur.KomponententestPicoFactory
+                            com.github.haschi.domain.haushaltsbuch.testing.KomponententestPicoFactory
                         </cucumber.api.java.ObjectFactory>
                     </systemPropertyVariables>
                 </configuration>
