--- a/testit/src/test/resources/cucumber.properties
+++ b/testit/src/test/resources/cucumber.properties
@@ -1,1 +1,1 @@
-cucumber.api.java.ObjectFactory = com.github.haschi.haushaltsbuch.infrastruktur.SystemtestPicoFactory
+cucumber.api.java.ObjectFactory = com.github.haschi.domain.haushaltsbuch.testing.SystemtestPicoFactory
